2016-07-24	"No output has been received in the last 10m0s, this
		potentially indicates a stalled build or something wrong
		with the build itself."

		share/innocent-pear/doge-3.cc :
		- bug fix: now calls rofl<...>::tcflow(, TCOON) on stdin and
		  stderr as well

2016-07-23	Beginning of clang++ support.

		configure :
		- now tests if host and target compilers support
		  `-fno-integrated-as', and if target supports `-wrapper'
		- libbfd is now obligatory

		bin/innocent-pear-c++.cc :
		- .ccc -> .cc
		- now supports sending compiler passes to calm.cc via using
		  `-###' rather than `-wrapper'
		- removed `-specs ...'
		- some bug fixes

		bin/innocent-pear-doge.cc :
		- .ccc -> .cc
		- now #define's innocent_pear_HOST_SIDE

		share/innocent-pear/doge-1.cc ,
		share/innocent-pear/doge-3.cc ,
		share/innocent-pear/doge-8.cc ,
		share/innocent-pear/epic.cc ,
		test/*.cc :
		- .ccc -> .cc

		GNUmakefile :
		- .ccc -> .cc
		- now writes results of `-wrapper' test to
		- now adds `-fno-integrated-as' compiler flag when building
		  .s files (host or target), if this flag is supported
		- removed checks for libbfd

		.travis.yml :
		- now also tests with clang++ as host-side compiler, and as
		  target-side compiler for default processor type (x86-64)
		  and x86-32

		share/innocent-pear/keyboard.cc :
		- added two more parameters to keyboard(...) and
		  keyboardest(...)
		- removed keyboard(, )
		- made keyboarder(...) local to module
		- now #define's innocent_pear_HOST_SIDE

		share/innocent-pear/nomnom.cc :
		- now #define's innocent_pear_HOST_SIDE
		- now includes derp.h via bbq.h, as it should

		share/innocent-pear/calm.cc :
		- now handles clang-style compiler passes
		- updated keyboard(...) and keyboardest(...) calls
		- now #define's innocent_pear_HOST_SIDE

		share/innocent-pear/calm.spec :
		- removed

		include/innocent-pear/bbq.h :
		- tweaked calculations of multiplicative inverses

		include/innocent-pear/kthxbai.h :